# SCD

./: .gitignore  LICENSE  README.md  TANet_(3x3)_augmentations.db  requirements.txt  rotate_pcd.py  run_all_tests.sh  run_all_tests_0.sh  run_eval.sh
DR-TANet-lightning/: DataModules.py  TANet.py  datasets.py  eval.py  eval_imgs.py  hparam_search.py  loss_function.py  main.py  mosaic.py  mosaic_v2.py  parameters.py  params.py  random_erase.py  save_path.txt  test.py  torch_tracing.py  train.py  util.py
DR-TANet-lightning/augmentations/: CopyPaste.py  DataModules.py  albums.py  datasets.py  misc_aug.py  mosaic.py  random_erase.py  rotate.py  rotate_pcd.py  split_data.py
DR-TANet-lightning/config/: PCD.yaml  VL_CMU_CD.yaml  augparams.yaml  debug.yaml  no_augmentation.yaml  paper_config.yaml
DR-TANet-lightning/config/VL_CMU_CD/: ALL_AUGMENTATIONS.yaml
DR-TANet-lightning/config/augmentations/: A.yaml  CP.yaml  CP_A.yaml  CP_RE.yaml  CP_RE_A.yaml  M.yaml  M_A.yaml  M_CP.yaml  M_CP_A.yaml  M_CP_RE.yaml  M_CP_RE_A.yaml  M_RE.yaml  M_RE_A.yaml  RE.yaml  RE_A.yaml  vanilla.yaml
DR-TANet-lightning/data/: DataModules.py  augmentations.py  datasets.py  wavelet_analysis.py
DR-TANet-lightning/dataset_modules/: PCD_data_module.py  PcdDataModule.py
DR-TANet-lightning/network/: TANet.py  TANet_element.py  attention.py
mobile_application/: CMakeLists.txt  build_application.txt  compile_application.sh  mobile_application.cpp
param_plots/: heatmap.py  heatmap_v2.py  parallel_coordinate.py  params.db  plots.py  slice_plot.py
scripts/: run_all_tests_1.sh  run_eval.sh
(+40 files in other folders)
